2009-09-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-00
	* 33X and above

2009-08-16  Philipp Schieferdecker <philipp.schieferdecker@cern.ch>

	* tag V00-03-02
	* add 'prefix' parameter to jet_inspect_histos_x and
	jet_inspect_graphs_x 
	* various little fixes
	
2009-07-21  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-03-00:
	* add bin/jet_inspect_histos_x.cc
	* add bin/jet_inspect_graphs_x.cc
	* add bin/BuildFile
	* updated / fixed RootStyle
	* enable ObjectLoader to switch the order of variables
	
2009-07-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-00
	* tested to work with both 2213 and 310
	* add EtaPtMinCandViewRefSelector

2008-12-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-00
	* remove HistogramLoader class
	* add ObjectLoader class (templated); ObjectLoader<TH1F> replaces
	HistogramLoader

2008-12-03  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-01
	* small bug fixes

2008-07-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-00
	* first import
